--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "^3.3.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "require": "^2.4.20"
   },
   "description": "a social app for micgivers in an area",
@@ -18,6 +20,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
