--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.data.mongodb.database=mainDB
 #spring.data.mongodb.grid-fs-database=
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
-#spring.data.mongodb.repositories.enabled=true # if spring data repository support is enabled
+spring.data.mongodb.repositories.type=auto
+#if spring data repository support is enabled
