--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "iknowaguy",
   "version": "0.0.1",
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "jquery": "^3.3.1",
+    "mobx": "^3.6.1",
+    "mobx-react": "^4.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "require": "^2.4.20"
